--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
       </div>
     </div>
     <div class="container">
-      <div class="row">
-        <div class="col-6 pl-4">
+      <div class="row text-center text-md-left">
+        <div class="col-12 col-md-6 pl-md-4">
           <h2>
             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
           </h2>
         </div>
-        <div class="col-6 pr-5">
+        <div class="col-12 col-md-6 pr-md-5">
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
