--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <div class="container-fluid">
       <nav
-        class="navbar navbar-expand-md navbar-light bg-light fixed-top text-center"
+        class="navbar navbar-expand-lg navbar-light bg-light fixed-top text-center"
         id="navbar"
       >
         <a class="navbar-brand" href="#" id="logo"
